--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,9 @@
-version: '3.7'
+version: '3.1'
 
 services:
 
   wordpress:
-    image: wordpress:5.8  # Specify the desired WordPress version tag
+    image: wordpress
     restart: always
     ports:
       - 8080:80
@@ -13,7 +13,7 @@ services:
       WORDPRESS_DB_PASSWORD: examplepass
       WORDPRESS_DB_NAME: exampledb
     volumes:
-      - wordpress:/var/www/html
+      - $PWD/wordpress:/var/www/html
 
   db:
     image: mysql:5.7
@@ -24,10 +24,8 @@ services:
       MYSQL_PASSWORD: examplepass
       MYSQL_RANDOM_ROOT_PASSWORD: '1'
     volumes:
-      - db:/var/lib/mysql
+      - $PWD/db:/var/lib/mysql
 
 volumes:
   wordpress:
-    external: true
   db:
-    external: true
